# web-scraping

./: README.md  pyproject.toml  test.txt
tests/: test_web_scraping.py
web_scraping/: scraper.py
