[tool.poetry]
name = "web_scraping"
version = "0.1.0"
description = ""
authors = ["azez-alhoot <azezalhoot82@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.8"
BeautifulSoup4 = "^4.9.1"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
